@@ -3,10 +3,12 @@ package ledmein.repository;
 import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.databind.module.SimpleModule;
+import io.reactivex.Observable;
 import ledmein.deserializers.CommitDeserializer;
-import ledmein.model.Commit;
+import ledmein.deserializers.PullDeserializer;
 import ledmein.model.Event;
-import ledmein.model.EventType;
+import ledmein.repository.model.CommitEvent;
+import ledmein.repository.model.PullEvent;
 import lombok.NonNull;
 import lombok.SneakyThrows;
 import org.slf4j.Logger;
@@ -15,65 +17,62 @@ import org.springframework.stereotype.Repository;
 
 import java.net.URL;
 import java.util.ArrayList;
+import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Repository
 public class DefaultEventRepository implements EventRepository {
 
     private static Logger logger = LoggerFactory.getLogger(DefaultEventRepository.class);
+    private final ObjectMapper mapper;
+
+    public DefaultEventRepository() {
+        mapper = new ObjectMapper();
+        SimpleModule module = new SimpleModule();
+        module.addDeserializer(CommitEvent.class, new CommitDeserializer());
+        module.addDeserializer(PullEvent.class, new PullDeserializer());
+        mapper.registerModule(module);
+    }
 
     @Override
     public List<Event> getEvents(@NonNull String ownerUsername, @NonNull String repoName) {
         String uriPrefix = "https://api.github.com/repos/" + ownerUsername + "/" + repoName;
 
-
-        List<EventWrapper> eventWrappers = new ArrayList<>();
+        List<GitHubEvent> eventWrappers = new ArrayList<>();
 
         eventWrappers.addAll(getCommits(uriPrefix));
         eventWrappers.addAll(getPulls(uriPrefix));
 
-
-
-        return eventWrappers.stream()
-                .sorted((a, b) -> (int) (a.eventTime - b.eventTime))
-                .map(eventWrapper -> eventWrapper.event)
-                .collect(Collectors.toList());
+        return Observable.fromIterable(eventWrappers)
+                .sorted(Comparator.comparingLong(o -> o.eventTime))
+                .map(gitHubEvent -> new Event("sashka", gitHubEvent.eventType))
+                .toList()
+                .blockingGet();
     }
 
     @SneakyThrows
-    public List<EventWrapper> getCommits(@NonNull String uriPrefix) {
-        logger.info("Start read commits");
-        ObjectMapper mapper = new ObjectMapper();
-        SimpleModule module = new SimpleModule();
-        module.addDeserializer(Commit.class, new CommitDeserializer());
-        mapper.registerModule(module);
-
-        List<Commit> commits = mapper.readValue(new URL(uriPrefix + "/commits"), new TypeReference<List<Commit>>() {
+    private List<CommitEvent> getCommits(@NonNull String uriPrefix) {
+        return readFromRemote(buildUrl(uriPrefix, "/commits"), new TypeReference<List<CommitEvent>>() {
         });
-
-        logger.info("End read commits: " + commits);
-
-        return commits.stream()
-                .map(commit -> new EventWrapper(new Event("AUTHOR", EventType.COMMIT), commit.time))
-                .collect(Collectors.toList());
     }
 
     @SneakyThrows
-    public List<EventWrapper> getPulls(@NonNull String uriPrefix) {
-        logger.info("Start read pulls");
-        ObjectMapper mapper = new ObjectMapper();
-        SimpleModule module = new SimpleModule();
-        module.addDeserializer(Commit.class, new PullsDeserializer());
-        mapper.registerModule(module);
-
-        List<Pulls> pulls = mapper.readValue(new URL(uriPrefix + "/pulls?status=all"), new TypeReference<List<Commit>>() {
+    private List<PullEvent> getPulls(@NonNull String uriPrefix) {
+        return readFromRemote(buildUrl(uriPrefix, "/pulls?state=all"), new TypeReference<List<PullEvent>>() {
         });
-
-        logger.info("End read pulls: " + commits);
-
-        return commits.stream()
-                .map(commit -> new EventWrapper(new Event("AUTHOR", EventType.COMMIT), commit.time))
-                .collect(Collectors.toList());
     }
+
+    @SneakyThrows
+    private <T> List<T> readFromRemote(URL url, TypeReference<List<T>> typeReference) {
+        logger.info("Start read " + url);
+        List<T> list = mapper.readValue(url, typeReference);
+        logger.info("End read " + url);
+        return list;
+    }
+
+    @SneakyThrows
+    private URL buildUrl(String uriPrefix, String address) {
+        return new URL(uriPrefix + address);
+    }
+
 }
